Ensure text is readable even with the indicator present

--- a/src/components/DashboardValue.module.css
+++ b/src/components/DashboardValue.module.css
@@ -14,12 +14,14 @@
 
 .label {
   composes: display from "../shared/typography.css";
+  composes: outlinedText from "../shared/colors.css";
   font-size: 24pt;
   margin: 0;
   padding: 0;
 }
 .value {
   composes: body from "../shared/typography.css";
+  composes: outlinedText from "../shared/colors.css";
   font-size: 48pt;
   margin: 0;
   padding: 0;
@@ -27,6 +29,7 @@
 }
 .unit {
   composes: display from "../shared/typography.css";
+  composes: outlinedText from "../shared/colors.css";
   margin: 0;
   padding: 0;
 }
@@ -35,4 +38,5 @@
   left: 50%;
   top: 40%;
   transform: translate(-50%, -40%);
+  z-index: -1;
 }
